--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/lasagna.html">The great lasagna</a></li>
+            <li><a href="./recipes/grated_carrots.html">Grated carrots</a></li>
+            <li><a href="./recipes/zucchini_soup.html">Zucchini soup</a></li>
+        </ul>
     </body>
 </html>
